test/param/errors/multipleParamInitErrors.chpl
param n = read(int),
      quarterN = n / 4;
