test/param/errors/multipleParamInitErrors.good
multipleParamInitErrors.chpl:1: error: Initializing parameter 'n' to value not known at compile time
multipleParamInitErrors.chpl:2: error: Initializing parameter 'quarterN' to value not known at compile time
